# russian-toxic-classifier-ml-ops

./: README.md  pyproject.toml
notebooks/: main.ipynb
notebooks/experiments/0/: meta.yaml
notebooks/experiments/0/2544b4e758ea471db580b908b8d34f2c/: meta.yaml
notebooks/experiments/0/77134de52471465280b715a2fec44790/: meta.yaml
notebooks/experiments/0/77a58c0755b1435aaa4eac23fff326ff/: meta.yaml
notebooks/experiments/0/d9a779197c744ebc90ab2adea803dcb7/: meta.yaml
notebooks/experiments/0/e8dd1e5db4ad43bda6f0aec6bf9e58cc/: meta.yaml
notebooks/experiments/1/: meta.yaml
notebooks/experiments/1/0058be60a8294aaba1ae496c754e06bd/: meta.yaml
notebooks/experiments/1/0dcfee6171984de8908b8ea0f266f297/: meta.yaml
notebooks/experiments/1/1004641df823419284cd4c2d93598a36/: meta.yaml
notebooks/experiments/1/12426106a5e3482daadb7e8fa6984cf7/: meta.yaml
notebooks/experiments/1/16bc251f6c0e4948a94d3bbd49e4c9fe/: meta.yaml
notebooks/experiments/1/17774a426a74442987bba3bdf6fd151b/: meta.yaml
notebooks/experiments/1/1d6769bb9177484b850f6f66ca612188/: meta.yaml
notebooks/experiments/1/245768c30ecf4e1687ee5bdc7c0a06a6/: meta.yaml
notebooks/experiments/1/3011fc02b6674c9d875ed1550e843335/: meta.yaml
notebooks/experiments/1/3e5e62637a7442daa1daa54ec565e398/: meta.yaml
notebooks/experiments/1/546eabacad514306ba7f559a2e9e6399/: meta.yaml
notebooks/experiments/1/5aeeec5611a1456280f71c7126a8ae22/: meta.yaml
notebooks/experiments/1/5b7610f79a304099a6a32d5cd3c78597/: meta.yaml
notebooks/experiments/1/624911d1bc604babbfad56c469c43f1a/: meta.yaml
(+262 files in other folders)
