[tool.poetry]
name = "russian-toxic-classification"
version = "0.1.0"
description = "Classification of russian comment to toxic or not."
authors = ["Pavel Kochkin <kochkin27@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
